tests/ifcc-test-output/testfiles-3_01_13_var_name_invalid/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:9: error: stray ‘\302’ in program
    2 |     int ¼helloWorld;
      |         ^
input.c:2:10: error: stray ‘\274’ in program
    2 |     int ¼helloWorld;
      |          ^

return code: 1
